[package]
name = "symlink-creator"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.9.3"
chrono = "0.4.19"
tempfile = "3.2.0"
toml = "0.5.8"
